Specify procfile and engines in package.json

--- a/phantom-bootstrap-main/package.json
+++ b/phantom-bootstrap-main/package.json
@@ -5,7 +5,7 @@
   "author": "Timothy McBurney-Lin",
   "license": "MIT",
   "engines": {
-    "node": "14.x"
+    "node": "14.0"
   },
   "scripts": {
     "dev": "gulp",
